== 1.2.5

* Major changes
 * To support video streaming: redirect on first document cache. WARNING: This 
   implies changes to vhost files !
 * WARN: Properties in list context do not resolve with first element anymore. "first" prefix needed.

* Minor changes
 * Fixed encode_params in Ajax requests.
 * Fixed cached path in vhost file.
 * Added "uuid" method (generates a unique id). <== TODO: Document
 
== 1.2.4 2013-06-13

* Major changes
 * Added class filtering to Acl in 'create' action. <== TODO: Document
 * Uploading html files does not transform them into zafu (use .zafu ext for this)
 * Added file upload support from zena remote API.
 * Added 'content_type' regexp to force virtual class on Document creation. <== TODO: Document
 * Extended "create group" in vclass to be "allow group" (edit).
 * Added support for [versions_list] to display list of versions and status.
 
* Minor changes
 * Support for raw html in zazen with '<notextile>' or '<html>' tag. Must be allowed with notextile='true' on [zazen] tag.
 * Fixed preview of content with ACL (considering the POST on /zafu as a 'read').
 * Added support for "class not like Image" or "class <> Image" to sqliss.
 * Added url to clear cache with /sites/clear_cache (admin only). <== TODO: Document
 * encode_params now supports arrays.
 * Add 'id' to date input.
 * Fixed 404 error.
 * Toggle takes dynamic parameters for "js" and "arity".
 * Fixed multiple toggles side-by-side.
 * Fixed nested blocks and class scoping.
 * Added support for "onUpdate" in [input] with date type.
 * Hash 'keys' returns sorted elements in zafu.
 * Improved computation of width and height in [img] when using 'forced' iformat.
 * Image width and height properties auto-fix themselves (need to read file on each display if not fixed).
 * Added support for 'mode' in encode_params.
 * Fixed [link_name]_status, _comment and other relation proxy methods.

== 1.2.3 2013-03-11

* Major changes