@@ -1030,135 +1030,3 @@ END:VCALENDAR
     assert_equal nodes_id(:cleanWater), nodes.first.id
   end
 end
-
-=begin
-
-  def test_import_archive
-    preserving_files('test.host/data') do
-      login(:tiger)
-      post 'import', :archive => uploaded_archive('import.tgz'), :id => nodes_zip(:status)
-      assert_response :success
-      assert_template 'import'
-    end
-  end
-
-  def test_form_tabs
-    @controller = TestNodeController.new
-    init_controller
-    page = @controller.send(:secure, Node) { Node.find(nodes_id(:status))    }
-    @controller.instance_variable_set(:@node, page)
-    assert_equal [["drive", "drive"], ["links", "links"], ["help", "help"]], @controller.send(:form_tabs)
-  end
-
-  def test_popup_page_not_found
-    get 'drive', :id=>99
-    assert_redirected_to :controller => 'node', :action=>'not_found'
-    get 'not_found'
-    assert_template 'node/not_found'
-  end
-
-
-  def test_add_link
-    login(:tiger)
-    node = secure!(Node) { nodes(:proposition) } # Post virtual class
-    assert_nil node.find(:all,'blogs')
-    assert_kind_of Relation, node.relation_proxy('blog')
-    post 'link', 'role'=>'blog', 'id'=>nodes_zip(:proposition), 'controller'=>'nodes', 'other_id'=>nodes_zip(:cleanWater)
-    assert_response :success
-    node = secure!(Node) { nodes(:proposition) } # reload
-    assert blogs = node.find(:all,'blogs')
-    assert_equal 1, blogs.size
-    assert_equal nodes_id(:cleanWater), blogs[0][:id]
-  end
-
-  def test_tags_update_string
-    login(:lion)
-    post 'update', :id => nodes_zip(:art), :node => {'tagged_ids' => "#{nodes_zip(:status)}, #{nodes_zip(:people)}"}
-
-    node = secure!(Node) { nodes(:art) }
-    assert_equal 2, node.tagged.size
-    stat = secure!(Node) { nodes(:status) }
-    peop = secure!(Node) { nodes(:people) }
-    assert_equal node[:id], stat.tags[0][:id]
-    assert_equal node[:id], peop.tags[0][:id]
-  end
-
-  def test_tags_update_array
-    login(:lion)
-    post 'update', :id => nodes_zip(:art), :node => {:tagged_ids => [nodes_zip(:lion).to_i, nodes_zip(:cleanWater).to_s]}
-
-    node = secure!(Node) { nodes(:art) }
-    assert_equal 2, node.tagged.size
-    lion = secure!(Node) { nodes(:lion) }
-    clea = secure!(Node) { nodes(:cleanWater) }
-    assert_equal node[:id], lion.tags[0][:id]
-    assert_equal node[:id], clea.tags[0][:id]
-  end
-
-  def test_create_ok
-    login(:tiger)
-    post 'create', :node=>{:klass=>'Tracker', :parent_id=>nodes_zip(:zena), :name=>'test'}
-    assert_response :success
-    assert_kind_of Page, assigns['page']
-    assert assigns['page'].vkind_of?('Tracker')
-    assert !assigns['page'].new_record?, "Not a new record"
-  end
-
-  def test_bad_skin_name
-    login(:anon)
-    without_files('zafu') do
-      Node.connection.execute "UPDATE nodes SET skin = 'bad' WHERE id = #{nodes_id(:status)}"
-      assert_nothing_raised do
-        get 'show', "prefix"=>"en",
-         "path"=>["projects", "cleanWater", "page22.html"]
-      end
-    end
-    assert_response :success
-  end
-
-  def test_find_node
-    Node.connection.execute "UPDATE nodes SET name = '2006' where id = #{nodes_id(:projects)}"
-    Node.connection.execute "UPDATE nodes SET name = '25-10-2006' where id = #{nodes_id(:wiki)}"
-    Node.connection.execute "UPDATE nodes SET name = 'archive-1' where id = #{nodes_id(:bird_jpg)}"
-    [ ['section12.html',:success],
-      ['section12_tree.xml',:success],
-      ['2006','page18.html'],
-      ['2006.xml','page18.xml'],
-      ['p12','page12.html'],
-      ['25-10-2006','blog29.html'],
-      ['archive-1','image30.html'],
-      ['archive', 404],
-    ].each do |name, result|
-      puts name
-      get 'show', 'prefix' => 'en', 'path' => [name]
-      if result.kind_of?(String)
-        assert_redirected_to 'path' => [result]
-      else
-        assert_response result
-      end
-    end
-  end
-
-  def test_cached_file
-    without_files('test.host/public') do
-      with_caching do
-        login(:anon)
-        page_path = visitor.site.public_path + '/en/section12.html'
-        file_path = "#{SITES_ROOT}#{page_path}"
-
-        assert !File.exists?(file_path), "No cached file yet"
-        assert !CachedPage.find_by_path_and_site_id(page_path, sites_id(:zena)), "No cache info yet"
-
-        get 'show', 'prefix' => 'en', 'path' => ['section12.html']
-        assert_response :success
-
-        assert File.exists?(file_path), "Cache file created"
-        assert CachedPage.find_by_path_and_site_id(page_path, sites_id(:zena))
-      end
-    end
-  end
-
-  # test edit_... mode only if can_write?
-
-end
-=end
