@@ -38,4 +38,6 @@ Contact_email:
 
 Contact_address:
 
-Contact_country:
+Contact_country:  
+
+Note_info:
