@@ -4,6 +4,7 @@
  * To support video streaming: redirect on first document cache. WARNING: This 
    implies changes to vhost files !
  * WARN: Properties in list context do not resolve with first element anymore. "first" prefix needed.
+ * Enable VirtualClass on native classes !
 
 * Minor changes
  * Fixed encode_params in Ajax requests.
